# adventofcode

./: .pre-commit-config.yaml  Pipfile  pyproject.toml
2023/day1/: day1_1.py  day1_2.py
2023/day10/: day10_1.py  day10_2.py
2023/day11/: day11.py
2023/day12/: day12_1.py  day12_2.py
2023/day13/: day13_1.py  day13_2.py
2023/day14/: day14_1.py  day14_2.py
2023/day15/: day15_1.py  day15_2.py
2023/day16/: day16.py
2023/day17/: day17_1.py  day17_2.py
2023/day18/: day18_1.py
2023/day2/: day2_1.py  day2_2.py
2023/day3/: day3_1.py  day3_2.py
2023/day4/: day4_1.py  day4_2.py
2023/day5/: day5_1.py  day5_2.py
2023/day6/: day6_1.py  day6_2.py
2023/day7/: day7_1.py  day7_2.py
2023/day8/: day8_1.py  day8_2.py
2023/day9/: day9_1.py  day9_2.py
2024/: day1.ipynb
2024/day1/: day1.ipynb
2024/day10/: day10.ipynb
2024/day12/: day12.ipynb
2024/day17/: day17.ipynb
2024/day2/: day2.ipynb
2024/day20/: day20.ipynb
2024/day21/: day21.ipynb
2024/day3/: day3.ipynb
2024/day4/: day4.ipynb
2024/day5/: day5.ipynb
2024/day6/: day6.ipynb
2024/day7/: day7.ipynb
2024/day8/: day8.ipynb
2024/day9/: day9.ipynb
